Fixing high-contrast issues (#2914)
* #2781, fixing HC Breadcrumb chrevron border

* #2854, HC context menu hover and select colors

* #2858, fixing border gaps in overlay

* #2766, HC tab pivot focus styling

* #2656, HC adjustments to calendar today and selected days

* #1903, making HC searchbox active border color different

* rush change

* Preventing system color from being used outside of HC mode

--- a/packages/office-ui-fabric-react/src/components/ContextualMenu/ContextualMenu.scss
+++ b/packages/office-ui-fabric-react/src/components/ContextualMenu/ContextualMenu.scss
@@ -57,6 +57,12 @@ $ContextualMenu-text-disabled: $menuTextDisabledColor;
 
   &:hover:not([disabled]) {
     background: $ContextualMenu-background-hover-color;
+
+    @include high-contrast {
+      background: Highlight;
+      color: HighlightText;
+      -ms-high-contrast-adjust: none;
+    }
   }
   &.isDisabled,
   &[disabled] {
@@ -77,6 +83,12 @@ $ContextualMenu-text-disabled: $menuTextDisabledColor;
     background: $ContextualMenu-background-selected-color;
     color: $ContextualMenu-text-selected-color;
     font-weight: $ms-font-weight-semibold;
+
+    @include high-contrast {
+      background: Highlight;
+      color: HighlightText;
+      -ms-high-contrast-adjust: none;
+    }
   }
 }
 
@@ -135,6 +147,10 @@ a.link {
 
 .iconColor {
   color: $ContextualMenu-icon-color;
+
+  @include high-contrast {
+    color: HighlightText;
+  }
 }
 
 .itemText {
